@@ -29,6 +29,11 @@ Version 12     Live Server Fixes
   (there are only 443,556 possible names, so duplicate names will be necessary
   at some point, but avoid them as much as possible).
 
+--Fixed rare DENIED BY SERVER error when your opponent leaves game right at the
+  end of a round (thanks Pilam69).
+
+
+
 
 
 Version 12     2015-January-8
